Add announcement center and code generator
